test/fail_compilation/diag9827b.d
// REQUIRED_ARGS: compilable/asdf_not_exist compilable/asdf_not_exist
/*
TEST_OUTPUT:
---
Error: Duplicate file on command-line: 'compilable/asdf_not_exist'
---
*/
void main() { }
